# talky

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: config.rs  error.rs  logger.rs  main.rs  misc.rs
src/calling/: mod.rs
src/config/: default.toml  mod.rs
src/misc/: mod.rs
src/moderation/: ban.rs  kick.rs  mod.rs  purge.rs  unban.rs
