[package]
name = "talky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37", features = ["fs", "rt-multi-thread", "macros"]}
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
poise = "0.6"
